Fix spacing below headings in .rhythm

--- a/src/assets/styles/partials/utils/_rhythm.scss
+++ b/src/assets/styles/partials/utils/_rhythm.scss
@@ -5,6 +5,6 @@
 
   > * + :is(h2,h3,h4,h5,h6) {
     margin-top: 1.6em;
-    margin-bottom: 1rem;
+    margin-bottom: 1.6rem;
   }
 }
